# spin-trigger-sqs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  release-process.md  spin-pluginify.toml
.github/workflows/: build.yml  e2e.yml
e2e-test/: e2e-test.sh  elasticmq.conf
guest/: Cargo.toml  spin.toml
guest/src/: lib.rs
src/: aws.rs  lib.rs  main.rs  utils.rs
