[package]
name = "trigger-sqs"
version = "0.9.2"
edition = "2021"
rust-version = "1.81"

[dependencies]
anyhow = "1.0.68"
aws-config = "0.52.0"
aws-sdk-sqs = "0.22.0"
clap = { version = "3.1.15", features = ["derive", "env"] }
futures = "0.3.31"
serde = "1.0"
spin-core = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-factors = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-runtime-factors = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-telemetry = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
spin-trigger = { git = "https://github.com/spinframework/spin", tag = "v3.3.1" }
tokio = { version = "1", features = ["rt", "macros", "time", "signal"] }
tokio-scoped = "0.2.0"
tracing = { version = "0.1", features = ["log"] }
wasmtime = { version = "33.0.0" }

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { version = "0.10" }
